Updated prob. distribution files

--- a/identifying_distribution.html
+++ b/identifying_distribution.html
@@ -748,7 +748,7 @@ test_A</code></pre>
 ## 
 ## data:  x_shifted
 ## X-squared = 9.186e+285, df = NA, p-value = 0.0004998</code></pre>
-<p>Then if p-value 4.997501210^{-4} &lt; 0.05, below the significance level, we reject the null hypothesis, that the candidate distribution is consistent with a lognormal distribution.</p>
+<p>Then if p-value 4.997501210^{-4} &lt; 0.05, below the significance level, we reject the null hypothesis, that the candidate distribution is consistent with a logistic distribution.</p>
 <p>This method is a little too manual to be easily adaptable, but I’m still comparing procedures to see which is the more statistically sound. It’s a bit of a rabbit warren.</p>
 </div>
 <div id="hypergeometric-distribution" class="section level3">
